# PowerGear

./: LICENSE  README.md
dataset/: README.md
dataset/benchmark/: README.md
dataset/graph_sample/: AB_1.pt  AB_2.pt  AplusB.pt  Ax.pt  aA.pt  aAB.pt  aAplusbB.pt  aAx.pt  mac_1.pt  mac_2.pt  mac_3.pt  mac_4.pt  mac_5.pt  xy.pt
graph_construction/: README.md
graph_construction/feature_extraction/: README.md  build_act_trace.sh  build_ir_revise.sh
graph_construction/feature_extraction/ir_revise/: CMakeLists.txt
graph_construction/feature_extraction/ir_revise/src/: CMakeLists.txt  actTracer.cpp  actTracer.h  c_operator.cpp  c_operator.h  funcDef.cpp  funcDef.h  main.cpp
graph_construction/feature_extraction/overall_run/: feature_extract.py
graph_construction/feature_extraction/preprocess/: feature_embed.py  op_extract.py
graph_construction/sample_generation/: README.md  sample_generation.py
hec_gnn/: HEC_GNN_env_install.sh  README.md
hec_gnn/baseline_model/: README.md  __init__.py  main.py
hec_gnn/conv/: Conv.py  __init__.py
hec_gnn/ensemble_model/: README.md
hec_gnn/ensemble_model/get_ensemble_result/: get_result.py
hec_gnn/ensemble_model/test/: __init__.py  main.py
hec_gnn/ensemble_model/train/: main.py  train.sh
hec_gnn/single_model/: README.md  __init__.py  main.py
hec_gnn/single_model/example/: single_dataset.sh
paper_model/test_result/atax/: test_atax_seed<1>_fold<0>_results.csv  test_atax_seed<1>_fold<1>_results.csv  test_atax_seed<1>_fold<2>_results.csv  test_atax_seed<1>_fold<3>_results.csv  test_atax_seed<1>_fold<4>_results.csv  test_atax_seed<1>_fold<5>_results.csv  test_atax_seed<1>_fold<6>_results.csv  test_atax_seed<1>_fold<7>_results.csv  test_atax_seed<1>_fold<8>_results.csv  test_atax_seed<1>_fold<9>_results.csv  test_atax_seed<2>_fold<0>_results.csv  test_atax_seed<2>_fold<1>_results.csv  test_atax_seed<2>_fold<2>_results.csv  test_atax_seed<2>_fold<3>_results.csv  test_atax_seed<2>_fold<4>_results.csv  test_atax_seed<2>_fold<5>_results.csv  test_atax_seed<2>_fold<6>_results.csv  test_atax_seed<2>_fold<7>_results.csv  test_atax_seed<2>_fold<8>_results.csv  test_atax_seed<2>_fold<9>_results.csv  test_atax_seed<3>_fold<0>_results.csv  test_atax_seed<3>_fold<1>_results.csv  test_atax_seed<3>_fold<2>_results.csv  (+7 more)
utils/: base_func.py  dataloader.py
(+580 files in other folders)
